--- a/iwebkit-test.html
+++ b/iwebkit-test.html
@@ -229,6 +229,11 @@
 			text-shadow: rgba(0,0,0,0.6) 0 -1px 0;
 			text-decoration: none;
 		}
+        #leftbutton .buttontext:hover {
+            -webkit-border-image: url("war/images/button_bright.png") 0 5 0 5;
+            -moz-border-image: url("war/images/button_bright.png") 0 5 0 5;
+            -o-border-image: url("war/images/button_bright.png") 0 5 0 5;
+        }
 
 		#cb-iconbutton-left, #cb-iconbutton-center, #cb-iconbutton-right {
             position: absolute;
