--- a/index.html
+++ b/index.html
@@ -2,17 +2,36 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8">
-    <title>Civbuddy by tsjensen</title>
+    <title>CivBuddy - Original Civilization Board Game Utility</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
+    <link rel="apple-touch-icon" sizes="57x57" href="/apple-touch-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="/apple-touch-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="/apple-touch-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="/apple-touch-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="/apple-touch-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="/apple-touch-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="/apple-touch-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="/apple-touch-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon-180x180.png">
+    <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="/android-chrome-192x192.png" sizes="192x192">
+    <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96">
+    <link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
+    <link rel="manifest" href="/manifest.json">
+    <meta name="apple-mobile-web-app-title" content="CivBuddy">
+    <meta name="application-name" content="CivBuddy">
+    <meta name="msapplication-TileColor" content="#2a3b85">
+    <meta name="msapplication-TileImage" content="/mstile-144x144.png">
+    <meta name="theme-color" content="#ffffff">
   </head>
   <body>
     <section class="page-header">
-      <h1 class="project-name">Civbuddy</h1>
-      <h2 class="project-tagline">Utility webapp for fans of the original Civilization board game</h2>
+      <h1 class="project-name">CivBuddy</h1>
+      <h2 class="project-tagline">Helper app for the original Civilization board game</h2>
       <a href="https://github.com/tsjensen/civbuddy" class="btn">View on GitHub</a>
       <a href="https://github.com/tsjensen/civbuddy/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/tsjensen/civbuddy/tarball/master" class="btn">Download .tar.gz</a>
