--- a/index.html
+++ b/index.html
@@ -1,41 +1,45 @@
 ---
 title: Original Civilization Board Game Utility
-layout: default
+layout: markdown
 ---
 
-<section class="page-header">
-  <div class="titlelion"><img src="{{ site.baseurl }}/images/civbuddy-logo-lion-460x460.png" alt="" /></div>
-  <h1 class="project-name">CivBuddy</h1>
-  <h2 class="project-tagline">Helper app for the original Civilization board game</h2>
-  <a href="https://github.com/{{ site.github }}" class="btn">View on GitHub</a>
-  <a href="http://app.civbuddy.org/" class="btn prime">Start App</a>
-  <a href="https://github.com/{{ site.github }}/zipball/master" class="btn">Get Sources</a>
-</section>
+## Welcome to CivBuddy.
 
-<section class="main-content">
-      <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+CivBuddy is designed to support players of Francis Tresham's original Civilization board game by helping with the tactical planning when buying civilization cards.
+It has no artificial intelligence, and it does not play the game for you. This is not a computer game. The players gain no tactical advantage, but it saves time for everyone so that all players can concentrate on the fun parts of the game.
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
+- It supports multiple players ("hot seat"), which is useful if there are fewer smartphones than players
+- It works on mobile devices as well as desktop PCs, on all modern operating systems
+- Although it's a web app, it may be used offline
+- Full privacy: All data is saved in your web browser, nothing is transmitted to the server
+- It can be taught to know your house rules (within limits)
+- Three game variants already supported ([original](https://boardgamegeek.com/boardgame/71/civilization) (1980), [with western expansion](https://boardgamegeek.com/boardgameexpansion/2058/civilization-western-extension-map) (1988), and [advanced](https://boardgamegeek.com/boardgameexpansion/177/advanced-civilization) (1991))
 
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
+[![Variants]({{ site.baseurl }}/images/screenshots/screenshot-1_t.jpg)]({{ site.baseurl }}/images/screenshots/screenshot-1.png) [![Cards]({{ site.baseurl }}/images/screenshots/screenshot-2_t.jpg)]({{ site.baseurl }}/images/screenshots/screenshot-2.png) [![Funds]({{ site.baseurl }}/images/screenshots/screenshot-3_t.jpg)]({{ site.baseurl }}/images/screenshots/screenshot-3.png) [![Card Info]({{ site.baseurl }}/images/screenshots/screenshot-4_t.jpg)]({{ site.baseurl }}/images/screenshots/screenshot-4.png)
 
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
+[Click here]({{ site.appurl }}) to start right now!
 
-<h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span class="octicon octicon-link"></span></a>Creating pages manually</h3>
+## Development Setup
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+This website is primarily intended to centralize development related information.
 
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+### Setting up a local development workspace
 
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+In order to build {{ site.name }} yourself, follow these steps:
 
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
+ 1. Make sure you have the prerequisites set up:
+   - [Git](http://git-scm.com/)
+   - [Java 7 SDK](http://www.oracle.com/technetwork/java/javase/downloads/jdk7-downloads-1880260.html)
+ 1. Make sure that your environment variable `JAVA_HOME` points to the Java&nbsp;7 SDK, for example `C:\PROGRA~1\Java\jdk1.7.0_80` (Windows).
+ 1. `JAVA_HOME/bin` should be on the `PATH`
+ 1. If you don't have a Gradle User Home yet, set it up by creating an empty directory called `.gradle` somewhere, for example `d:\.gradle` (Windows) or `~/.gradle` (Unix). Create an environment variable `GRADLE_USER_HOME` which points to this directory. This directory may grow quite large over time (mine is 2&nbsp;GB), because Gradle uses it to cache all downloaded stuff.
+ 1. Clone the {{ site.name }} repo by running on the command line:
+     `git clone https://github.com/{{ site.github }}.git`
+ 1. `cd civbuddy`
+ 1. `gradlew build`
+     This will take care of everything needed for a successful build of {{ site.name }}, including download and installation of Gradle.
 
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
+In order to run {{ site.name }} in development mode, follow these steps:
 
-</section>
+ 1. Make sure that {{ site.name }} was built ok in accordance with the above.
+ 1. TODO
