Add note on IDE agnosticism

--- a/index.html
+++ b/index.html
@@ -63,4 +63,6 @@ In order to run {{ site.name }} in development mode, follow these steps:
 
     and subsequently remain "stuck" like the previous call. This is good, it means Super Dev mode is up and running!
  1. Start Chrome and navigate to `http://localhost:8080/civbuddy`, the address at which your Jetty server is listening.
- 1. From the Chrome menu, select *More tools* &rarr; *Developer Tools* or press <kbd>Ctrl</kbd>+<kbd>Shift</kbd>+<kbd>I</kbd> to call up the development environment. You can browse the sources, change them, debug them, or view the application log from here.
+ 1. From the Chrome menu, select *More tools* &rarr; *Developer Tools* or press <kbd>Ctrl</kbd>+<kbd>Shift</kbd>+<kbd>I</kbd> to call up the development environment. You can browse the sources, debug them, or view the application log from here.
+
+The {{ site.name }} code as found on GitHub is IDE agnostic, so you may use your favorite IDE to edit the sources. Please make sure that IDE specific control files are never committed to git. In order to activate changes from your IDE in Super Dev Mode, press *Compile* on the *Dev Mode On* bookmarklet as described in the [Super Dev Mode](http://www.gwtproject.org/articles/superdevmode.html) docs.
