--- a/resources/index.html
+++ b/resources/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/open-iconic-bootstrap.min.css">
-    <link rel="stylesheet" href="css/civbuddy.css">
+    <link rel="stylesheet" crossorigin="anonymous" href="css/bootstrap.min.css">
+    <link rel="stylesheet" crossorigin="anonymous" href="css/open-iconic-bootstrap.min.css">
+    <link rel="stylesheet" crossorigin="anonymous" href="css/civbuddy.css">
 </head>
 <body>
 
