First successful build

--- a/resources/index.html
+++ b/resources/index.html
@@ -5,10 +5,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
     <link rel="stylesheet" crossorigin="anonymous" href="css/bootstrap.min.css">
     <link rel="stylesheet" crossorigin="anonymous" href="css/open-iconic-bootstrap.min.css">
     <link rel="stylesheet" crossorigin="anonymous" href="css/civbuddy.css">
+    <script src="js/civbuddy.js"></script>
 </head>
 <body>
 
