--- a/resources/index.html
+++ b/resources/index.html
@@ -24,8 +24,8 @@
             <div class="card card-clickable border-info mb-3" style="max-width: 20rem;">
                 <div class="card-header">{{ ruleDisplayName }}
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close"
-                        onclick="CivBuddy.buttonClick('Games', 'delete', '{{ gameKey }}')">
-                        <span aria-hidden="true">&times;</span>
+                        onclick="CivBuddy.buttonClick('Games', 'delete', '{{ gameKey }}', '{{ gameName }}')">
+                        <span class="oi oi-trash" aria-hidden="true"></span>
                     </button>
                 </div>
                 <div class="card-body text-info">
@@ -55,7 +55,8 @@
     <script id="rulesRadioTemplate" type="x-tmpl-mustache">
         <div class="form-check">
             <label class="form-check-label">
-                <input class="form-check-input" type="radio" name="optionsRadios" value="{{ variantId }}"{{#checked}} checked=""{{/checked}}>
+                <input class="form-check-input" type="radio" name="optionsRadios" value="{{ variantId }}"{{#checked}}
+                    checked=""{{/checked}} onclick="CivBuddy.buttonClick('Games', 'chooseVariant', '{{ variantId }}')">
                 {{ displayName }}
             </label>
         </div>
@@ -106,7 +107,7 @@
             <div class="card card-clickable border-info mb-3" style="max-width: 20rem;">
                 <div class="card-header">Original Game
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close" onclick="CivBuddy.buttonClick('Games', 'delete')">
-                        <span aria-hidden="true">&times;</span>
+                        <span class="oi oi-trash" aria-hidden="true"></span>
                     </button>
                 </div>
                 <div class="card-body text-info">
@@ -124,7 +125,7 @@
                 <div class="card-body text-dark">
                     <button type="button" class="btn btn-success btn-lg" data-toggle="modal"
                             data-target="#newGameModal">
-                        <span class="oi oi-plus" aria-hidden="true"></span> <span data-l10n-id="games-button-new"></span>
+                        <span class="oi oi-plus mr-2" aria-hidden="true"></span><span data-l10n-id="games-button-new"></span>
                     </button>
                 </div>
             </div>
@@ -154,6 +155,7 @@
                 </fieldset>
                 <fieldset class="form-group" id="rulesOptions">
                     <legend data-l10n-id="games-newModal-label-options"></legend>
+                    <p class="text-muted d-none" data-l10n-id="games-newModal-options-none"></p>
                     <div class="form-check">
                         <label class="form-check-label">
                             <input class="form-check-input" value="" checked="" aria-describedby="cardMultiUseHelp"
