--- a/resources/index.html
+++ b/resources/index.html
@@ -24,7 +24,7 @@
             <div class="card card-clickable border-info mb-3" style="max-width: 20rem;">
                 <div class="card-header">{{ ruleDisplayName }}
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close"
-                        onclick="CivBuddy.buttonClick('Games', 'delete', '{{ gameKey }}', '{{ gameName }}')">
+                        onclick="CivBuddy.buttonClick(this, 'Games', 'delete', '{{ gameKey }}', '{{ gameName }}')">
                         <span class="oi oi-trash" aria-hidden="true"></span>
                     </button>
                 </div>
@@ -48,7 +48,7 @@
     </script>
 
     <script id="flagTemplate" type="x-tmpl-mustache">
-        {{#menuText}}<a class="nav-link" href="#" onclick="CivBuddy.buttonClick('Games', 'switchLanguage', '{{ alt }}')">{{/menuText}}<img
+        {{#menuText}}<a class="nav-link" href="#" onclick="CivBuddy.buttonClick(this, 'Games', 'switchLanguage', '{{ alt }}')">{{/menuText}}<img
             class="flag{{#menuText}} mr-2{{/menuText}}" src="img/{{ fileName }}.svg" alt="{{ alt }}">{{ menuText }}{{#menuText}}</a>{{/menuText}}
     </script>
 
@@ -56,7 +56,7 @@
         <div class="form-check">
             <label class="form-check-label">
                 <input class="form-check-input" type="radio" name="optionsRadios" value="{{ variantId }}"{{#checked}}
-                    checked=""{{/checked}} onclick="CivBuddy.buttonClick('Games', 'chooseVariant', '{{ variantId }}')">
+                    checked=""{{/checked}} onclick="CivBuddy.buttonClick(this, 'Games', 'chooseVariant', '{{ variantId }}')">
                 {{ displayName }}
             </label>
         </div>
@@ -129,8 +129,9 @@
             </div>
             <div class="modal-body">
                 <div class="form-group">
-                    <label class="col-form-label" for="inputGameName" data-l10n-id="games-newModal-label-name"></label>
+                    <label class="form-control-label" for="inputGameName" data-l10n-id="games-newModal-label-name"></label>
                     <input class="form-control" placeholder="Name" id="inputGameName" type="text" maxlength="50">
+                    <div class="invalid-feedback d-none" data-l10n-id="games-newModal-label-invalidName"></div>
                 </div>
                 <fieldset class="form-group" id="rulesRadios">
                     <legend data-l10n-id="games-newModal-label-rules"></legend>
@@ -141,7 +142,7 @@
                 </fieldset>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-success" onclick="CivBuddy.buttonClick('Games', 'create')" data-l10n-id="games-newModal-button-create"></button>
+                <button type="button" class="btn btn-success" onclick="CivBuddy.buttonClick(this, 'Games', 'create')" data-l10n-id="games-newModal-button-create"></button>
                 <button type="button" class="btn btn-secondary" data-dismiss="modal" data-l10n-id="games-newModal-button-close"></button>
             </div>
         </div>
