Add Players page, add crude HTML include mechanism

--- a/resources/players.html
+++ b/resources/players.html
@@ -46,6 +46,7 @@
 
 <!-- build:include include/navigation.html --><!-- /build -->
 
+<!-- TODO HERE adjust for players page -->
 <!-- List of games -->
 <div class="container mt-4">
     <div class="row" id="gameList"></div>
