First draft of players page (HTML only)

--- a/resources/index.html
+++ b/resources/index.html
@@ -8,7 +8,7 @@
         <div class="col" id="{{ gameKey }}">
             <div class="card card-clickable border-info mb-3" style="max-width: 20rem;" onclick="CivBuddy.buttonClick(this, 'Games', 'select', '{{ gameKey }}')">
                 <div class="card-header">{{ ruleDisplayName }}
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"
+                    <button type="button" class="close" aria-label="Delete Game"
                         onclick="CivBuddy.buttonClick(this, 'Games', 'delete', '{{ gameKey }}', '{{ gameName }}', event)">
                         <span class="oi oi-trash" aria-hidden="true"></span>
                     </button>
