--- a/resources/players.html
+++ b/resources/players.html
@@ -4,40 +4,28 @@
     <title>CivBuddy</title>
     <!-- build:include include/head.html --><!-- /build -->
 
-    <script id="gameTemplate" type="x-tmpl-mustache">
-        <div class="col" id="{{ gameKey }}">
-            <div class="card card-clickable border-info mb-3" style="max-width: 20rem;" onclick="CivBuddy.buttonClick(this, 'Games', 'select', '{{ gameKey }}')">
-                <div class="card-header">{{ ruleDisplayName }}
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"
-                        onclick="CivBuddy.buttonClick(this, 'Games', 'delete', '{{ gameKey }}', '{{ gameName }}', event)">
+    <script id="playerTemplate" type="x-tmpl-mustache">
+        <div class="col" id="{{ situtationKey }}">
+            <div class="card card-clickable border-info mb-3" style="max-width: 20rem;" onclick="CivBuddy.buttonClick(this, 'Players', 'select', '{{ situtationKey }}')">
+                <div class="card-header"><span class="text-muted" data-l10n-id="players-cardstats"></span>
+                    <button type="button" class="close" aria-label="Delete Player"
+                        onclick="CivBuddy.buttonClick(this, 'Players', 'delete', '{{ situtationKey }}', '{{ playerName }}', event)">
                         <span class="oi oi-trash" aria-hidden="true"></span>
                     </button>
                 </div>
                 <div class="card-body text-info">
-                    <h4 class="card-title text-white">{{ gameName }}</h4>
-                    <p class="card-text"><span data-l10n-id="games-game-options"></span>: {{ options }}</p>
+                    <h4 class="card-title text-white">{{ playerName }}</h4>
+                    <p class="card-text"><span data-l10n-id="players-target-label"></span>: {{ pointsTarget }}</p>
                 </div>
             </div>
         </div>
     </script>
 
-    <script id="optionCheckBoxTemplate" type="x-tmpl-mustache">
+    <script id="pointsTargetRadioTemplate" type="x-tmpl-mustache">
         <div class="form-check">
             <label class="form-check-label">
-                <input class="form-check-input" value="" {{#checked}}checked="" {{/checked}}aria-describedby="{{ optionId }}Help"
-                        type="checkbox" id="option-{{ optionId }}">
-                {{ optionDisplayName }}
-            </label>
-            <small id="{{ optionId }}Help" class="form-text text-muted">{{ explanation }}</small>
-        </div>
-    </script>
-
-    <script id="rulesRadioTemplate" type="x-tmpl-mustache">
-        <div class="form-check">
-            <label class="form-check-label">
-                <input class="form-check-input" type="radio" name="optionsRadios" value="{{ variantId }}"{{#checked}}
-                    checked=""{{/checked}} onclick="CivBuddy.buttonClick(this, 'Games', 'chooseVariant', '{{ variantId }}')">
-                {{ displayName }}
+                <input class="form-check-input" type="radio" name="inputPointsTargetRadios" value="{{ pointsValue }}"{{#checked}}
+                    checked=""{{/checked}}>{{ pointsValue }} <span data-l10n-id="players-points"></span>
             </label>
         </div>
     </script>
@@ -46,16 +34,15 @@
 
 <!-- build:include include/navigation.html --><!-- /build -->
 
-<!-- TODO HERE adjust for players page -->
-<!-- List of games -->
+<!-- List of players -->
 <div class="container mt-4">
-    <div class="row" id="gameList"></div>
+    <div class="row" id="playerList"></div>
     <div class="row">
         <div class="col">
             <div class="card card-button mb-3" style="max-width: 20rem;">
                 <div class="card-body text-dark">
-                    <button type="button" class="btn btn-success btn-lg" data-toggle="modal" data-target="#newGameModal">
-                        <span class="oi oi-plus mr-2" aria-hidden="true"></span><span data-l10n-id="games-button-new"></span>
+                    <button type="button" class="btn btn-success btn-lg" data-toggle="modal" data-target="#newPlayerModal">
+                        <span class="oi oi-plus mr-2" aria-hidden="true"></span><span data-l10n-id="players-button-new"></span>
                     </button>
                 </div>
             </div>
@@ -63,34 +50,30 @@
     </div>
 </div>
 
-<!-- Modal dialog for creating new games -->
-<div class="modal fade" id="newGameModal" tabindex="-1" role="dialog" aria-labelledby="newGameModalLabel"
+<!-- Modal dialog for creating new players -->
+<div class="modal fade" id="newPlayerModal" tabindex="-1" role="dialog" aria-labelledby="newPlayerModalLabel"
      aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content border-success">
             <div class="modal-header">
-                <h5 class="modal-title text-success" id="newGameModalLabel" data-l10n-id="games-button-new"></h5>
+                <h5 class="modal-title text-success" id="newPlayerModalLabel" data-l10n-id="players-button-new"></h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
             <div class="modal-body">
                 <div class="form-group">
-                    <label class="form-control-label" for="inputGameName" data-l10n-id="games-newModal-label-name"></label>
-                    <input class="form-control" placeholder="Name" id="inputGameName" type="text" maxlength="50">
-                    <div class="invalid-feedback d-none" data-l10n-id="games-newModal-label-invalidName"></div>
+                    <label class="form-control-label" for="inputPlayerName" data-l10n-id="players-newModal-label-name"></label>
+                    <input class="form-control" placeholder="Name" id="inputPlayerName" type="text" maxlength="20">
+                    <div class="invalid-feedback d-none" data-l10n-id="players-newModal-label-invalidName"></div>
                 </div>
-                <fieldset class="form-group" id="rulesRadios">
-                    <legend data-l10n-id="games-newModal-label-rules"></legend>
-                </fieldset>
-                <fieldset class="form-group" id="rulesOptions">
-                    <legend data-l10n-id="games-newModal-label-options"></legend>
-                    <p class="text-muted" data-l10n-id="games-newModal-options-none"></p>
+                <fieldset class="form-group" id="pointsTargetRadios">
+                    <legend data-l10n-id="players-target-label"></legend>
                 </fieldset>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-success" onclick="CivBuddy.buttonClick(this, 'Games', 'create')" data-l10n-id="games-newModal-button-create"></button>
-                <button type="button" class="btn btn-secondary" data-dismiss="modal" data-l10n-id="games-newModal-button-close"></button>
+                <button type="button" class="btn btn-success" onclick="CivBuddy.buttonClick(this, 'Players', 'create')" data-l10n-id="players-newModal-button-create"></button>
+                <button type="button" class="btn btn-secondary" data-dismiss="modal" data-l10n-id="players-newModal-button-close"></button>
             </div>
         </div>
     </div>
